<resources>
    <string name="app_name">Locaces</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_password_not_match">This password confirmation doesn\'t match the entered password</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="app_name_text">Locaces</string>
    <string name="login">LOG IN</string>
    <string name="logout">Log out</string>
    <string name="signup">SIGN UP</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password_confirm">Password (Confirm)</string>
    <string name="invalid_email_password_text">Invalid email/password. Please Try again.</string>
    <string name="title_activity_about">About</string>
    <string name="about_text">Locaces is a social network based on places and locations.
     Locaces allows you to check-in and let your friends know where you are, to find your friends
     nearby and find information about different places and locations on the map.</string>
    <string name="app_version_text">Version 1.0</string>
    <string name="contact_us_text">Contact Us</string>
    <string name="title_activity_contact_us">Contact Us</string>
    <string name="copyrights_text">All rights reserved. Locaces (c) Copyright 2015.</string>
    <string name="email_exists_text">This email address already exists.</string>
    <string name="title_activity_home_page">Home</string>
    <string name="account_successful">Account successfully created!</string>
    <string name="success_dialog_title">Congratulations!</string>
    <string name="OK">OK</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="checkIn_text">CHECK IN</string>
    <string name="refresh_text">REFRESH</string>

</resources>
