<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.locaces.locaces.LoginActivity">

    <item
        android:id="@+id/settings"
        android:orderInCategory="0"
        app:showAsAction="never"
        android:title="@string/settings"/>

    <item
        android:id="@+id/logout"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:title="@string/logout"/>

    <item
        android:id="@+id/about"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/about"/>

    <item
        android:id="@+id/contactus"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:title="@string/contact_us_text"/>

    <item
        android:id="@+id/back_button"
        android:orderInCategory="4"
        app:showAsAction="always"
        android:title="Back"/>

</menu>